--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,9 @@ section {
     background-color: snow;
     width: 100px;
     height: 80px;
-    box-shadow: 1px 2px 3px 0px rgba(10, 10, 10, 0.36);
+    box-shadow: 1px 1px 2px 0px rgba(50, 50, 50, 0.36);
     margin: 2%;
+    border-radius: 2px;
 }
 
 #To_Do {
