organised localStorage lgoics to a localStorage object and used methods

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,30 @@ body {
     box-shadow: inset 0px 0px 6px 0px rgba(70, 70, 70, 0.7), 2px 5px 20px -2px rgba(100, 100, 100, 0.8);
 }
 
+#form_ticket {
+    width: 70%;
+    display: inline-block;
+    float: left;
+}
+
+#bin {
+    border: solid 4px rgba(255, 255, 255, 0.56);
+    height: 70%;
+    width: 20%;
+    padding-top: 1.5%;
+    float: right;
+    margin-right: 3%;
+    margin-top: 1%;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#icon {
+    font-size: 5em;
+    color: rgba(100, 100, 100, 0.6);
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+}
+
 input {
     font-size: medium;
     margin: 3px;
