--- a/css/style.css
+++ b/css/style.css
@@ -161,4 +161,20 @@ span.titleT {
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
 }
 
-
+@media screen and (max-width: 550px) {
+    .column {
+        width: 100%;
+        height: 25%;
+    }
+    #wrap {
+        height: 150%;
+    }
+    header {
+        height: 10%;
+        padding: 0;
+        font-size: larger;
+    }
+    .ticket {
+        font-size: small;
+    }
+}
