--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 html {
-    /*background-image: url("http://2013.jsconf.eu/img/js.eu.png");*/
-    /*background-image: url("../images/cake.jpg");*/
-    background: linear-gradient(125deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 13%, rgba(173,173,173,1) 100%); /* w3c */;
+    background:radial-gradient(circle at center, rgba(255,255,255,1) 0%, rgba(158,158,158,1) 40%, rgba(0,0,0,1) 100%); /* w3c */
     background-size: cover;
     height: 100%;
     margin: 0;
@@ -119,10 +117,11 @@ section {
     font-weight: 500;
     text-align: left;
     text-shadow: none;
-    background-color: rgba(255, 255, 255, 0.9);
+    /*background-color: rgba(255, 255, 255, 0.9);*/
+    background: linear-gradient(161deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 56%, rgba(225,225,225,0.9) 100%); /* w3c */
     width: 66%;
     height: 15%;
-    box-shadow: 1px 1px 5px 0px rgba(60, 60, 60, 0.5);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
     margin: 2%;
     border-radius: 3px;
 }
@@ -205,7 +204,7 @@ span.titleT {
 
 button, input {
     border-radius: 5px;
-    background-color: rgba(221, 221, 221, 0.80);
+    background-color: rgba(255, 255, 255, 0.80);
 }
 
 input[type="file"] {
