--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,8 @@ span.titleT {
     border-radius: 5px;
     font-size: 1em;
     font-weight: 600;
-    color: #6E5353;
-    text-shadow: 1px 1px 3px rgba(10, 10, 10, 0.5);
+    color: #000000;
+    text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
     /*box-shadow: inset 0px 0px 6px 0px rgba(70, 70, 70, 0.6), 2px 5px 20px -2px rgba(100, 100, 100, 0.8);*/
     display: none;
     background-color: rgba(255, 255, 255, 0.5);
