--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ span.titleT {
 #bin_frame {
     border-radius: 5px;
     /*border: solid 0.3em #ffffff;*/
-    height: 102%;
+    height: 100.5%;
     width: 25%;
     float: right;
     text-align: center;
@@ -175,6 +175,7 @@ span.titleT {
     margin-left: 1%;
     padding: 0.5%;
     border-radius: 5px;
+    float: left;
     /*border: solid 0.3em #ffffff;*/
     box-shadow: 1px 1px 20px -2px rgba(50, 50, 50, 0.8);
     background-color: rgba(0, 0, 0, 0.3);
